--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tauri": "tauri",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build",
+    "tauri:build-windows": "cargo tauri build --target x86_64-pc-windows-gnu",
+    "tauri:build-linux": "cargo tauri build --bundles deb"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "@tauri-apps/api": "^2.8.0",
     "tailwindcss": "^4.1.12",
     "vue": "^3.5.18"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^2.8.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0"
