--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
     "@tauri-apps/api": "^2.8.0",
+    "@tauri-apps/plugin-dialog": "^2.3.3",
     "tailwindcss": "^4.1.12",
     "vue": "^3.5.18"
   },
